--- a/recipes/resources/sass/app.scss
+++ b/recipes/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import "bootstrap/scss/bootstrap";
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 li {
     text-transform: none;
 }
@@ -36,6 +38,10 @@ li {
     padding: 100px 0;
     background-color: #f8f9fa;
 }
+.section3 {
+    padding: 50px 0 0;
+    background-color: #eff0f2;
+}
 
 .categoryCard {
     height: 200px;
@@ -43,6 +49,17 @@ li {
     margin-right: 10px;
     background-color: #dfd1bf;
     border: 1px solid #dee2e6;
+}
+
+img {
+    width: 100%;
+}
+
+.recipeImg {
+    height: 180px;
+    width: 180px;
+    padding: 10px;
+    margin: 0;
 }
 
 .fa,
