--- a/recipes/resources/sass/app.scss
+++ b/recipes/resources/sass/app.scss
@@ -9,6 +9,14 @@
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
+
+body {
+    font-family: "Montserrat", sans-serif;
+}
+footer {
+    margin-top: auto;
+}
 li {
     text-transform: none;
 }
@@ -26,7 +34,7 @@ li {
 
 .search-btn {
     background-color: white;
-    border: 1px solid #dee2e6;
+    border: 1px solid #eaeaea;
 }
 
 .nav-cont {
@@ -75,4 +83,65 @@ img {
 .addNew select,
 .addNew textarea {
     background-color: white;
+}
+
+.btn-primary {
+    background-color: rgb(28, 28, 28);
+    color: white;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: rgb(68, 68, 68);
+}
+
+.recipeCard {
+    border: 1px solid #eaeaea;
+}
+
+a {
+    text-decoration: none;
+}
+
+footer {
+    background-color: #dfd1bf;
+}
+
+footer p,
+footer a {
+    color: rgb(28, 28, 28);
+}
+
+.logo {
+    width: 40px;
+}
+
+.shadow {
+    box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.breadcrumb a {
+    color: rgb(28, 28, 28);
+}
+
+.login-card {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.loginBackground,
+.registerBackground {
+    background: url("breakfast.jpg") no-repeat center/cover;
+    height: 500px;
+    width: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.registerBackground {
+    background: url("registerPic.jpg") no-repeat center/cover;
+}
+
+.loginHeader {
+    margin-left: 100px;
 }
