--- a/recipes/resources/sass/app.scss
+++ b/recipes/resources/sass/app.scss
@@ -68,7 +68,7 @@ img {
 }
 
 .recipeImg {
-    height: 180px;
+    height: 190px;
     width: 190px;
     padding: 10px;
     margin: 0;
@@ -144,4 +144,12 @@ footer a {
 
 .loginHeader {
     margin-left: 100px;
+}
+
+.rcard {
+    width: 200px;
+}
+
+.recipeCard a {
+    color: rgb(28, 28, 28);
 }
